Fix autotools and glib
Signed-off-by: Steve Winslow <steve@swinslow.net>

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,9 +1,8 @@
 noinst_LIBRARIES = librepotracker.a
 librepotracker_a_SOURCES = repo.c tracker.c
-librepotracker_a_CFLAGS = -I../include `pkg-config --cflags glib-2.0`
+librepotracker_a_CFLAGS = -I../include $(glib_CFLAGS)
 
 bin_PROGRAMS = repoexample
 repoexample_SOURCES = main.c
-repoexample_CFLAGS = -I../include `pkg-config --cflags glib-2.0`
-repoexample_LDFLAGS = `pkg-config --libs glib-2.0`
-repoexample_LDADD = librepotracker.a
+repoexample_CFLAGS = -I../include $(glib_CFLAGS)
+repoexample_LDADD = librepotracker.a $(glib_LIBS)
