--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -1,5 +1,4 @@
 noinst_PROGRAMS = runtests
 runtests_SOURCES = tests.c testrepo.c
-runtests_CFLAGS = -I../include `pkg-config --cflags glib-2.0`
-runtests_LDFLAGS = `pkg-config --libs glib-2.0`
-runtests_LDADD = ../src/librepotracker.a
+runtests_CFLAGS = -I../include $(glib_CFLAGS)
+runtests_LDADD = ../src/librepotracker.a $(glib_LIBS)
