--- a/configure.ac
+++ b/configure.ac
@@ -3,7 +3,7 @@ AM_INIT_AUTOMAKE([-Wall -Werror foreign])
 AC_PROG_CC
 AC_PROG_RANLIB
 AM_PROG_AR
-PKG_CHECK_MODULES(GLIB, glib-2.0)
+PKG_CHECK_MODULES([glib], [glib-2.0])
 AC_CONFIG_HEADERS([config.h])
 AC_CONFIG_FILES([
   Makefile
